<resources>
    <string name="app_name">PointOfInterest</string>
    <string name="email_text">EMail</string>
    <string name="password_text">Password</string>
    <string name="sign_in_text">Sign in</string>
    <string name="login_text">login</string>
    <string name="firstname_tet">First name</string>
    <string name="lastname_text">Last name</string>
    <string name="cancel_text">Cancel</string>
    <string name="title_activity_maps">Map</string>

    <string name="service_not_available">Unable to access service!</string>
    <string name="invalid_lat_long_used">Invalid position!</string>
    <string name="no_address_found">Address not found!</string>
    <string name="address_found">Geocoding succeed.</string>
</resources>